laboratorios/laboratorio4/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vcc-python-helloworld
  name: vcc-python-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vcc-python-helloworld
  template:
    metadata:
      labels:
        app: vcc-python-helloworld
    spec:
      containers:
      - image: videocursoscloud/vcc-python-helloworld:amd64
        imagePullPolicy: Always
        name: vcc-python-helloworld
        ports:
        - containerPort: 5000
